--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>Somos un grupo de estudiantes de la Universidad Metropolitana con la misión de innvoar los proceso de la Universidad</p>
               </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>Proveemos un servicio seguro mediante el cual, brindamos la posibilidad de llevar el control de los procesos electorales de manera confiable a través de la web</p>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>A través de un usuario permitimos a los estudiantes ingresar a nuestra plataforma y votar por el candidato de su eleccion y en tiempo real brndamos los resultados</p>
               </div>
             </div>
           </div>
